fixed squished footer

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ h2 {
   color: #FFFFFE;
   bottom: 0px;
   left: 0px;
+  padding: 10px;
 }
 
 .footer-bottom a {
